--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,4 +1,4 @@
-<%- include("header") -%>
+<%- include("header"); -%>
 
     <div class="box" id="heading">
       <h1><%= listTitle %></h1>
@@ -18,4 +18,4 @@
       </form>
     </div>
   
-<%- include("footer") -%>
+<%- include("footer"); -%>
