--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,21 +1,30 @@
 <%- include("header"); -%>
 
-    <div class="box" id="heading">
-      <h1><%= listTitle %></h1>
-    </div>
+<div class="box" id="heading">
+  <h1><%= listTitle %></h1>
+</div>
 
-    <div class="box">
-      <% for (var i = 0; i < newListItems.length; i++) { %>
-      <div class="item">
-        <input type="checkbox" />
-        <p><%= newListItems[i]%></p>
-      </div>
-      <% } %>
-
-      <form action="/" method="post">
-        <input type="text" name="NewItem" placeholder="New Item" autocomplete="off"/>
-        <button type="submit" name="list" value=<%= listTitle %>>+</button>
-      </form>
+<div class="box">
+  <!-- For each loop to replace normal for loop -->
+  <% newListItems.forEach(function(item) { %>
+  <form action="/delete" method="post">
+    <div class="item">
+      <input type="checkbox" name="checkbox" value="<%=item.id%>" onchange="this.form.submit()"/>
+      <p><%= item.name %></p>
     </div>
-  
+    <input type="hidden" name="listName" value="<%= listTitle %>">
+  </form>
+  <% }); %>
+
+  <form class="item" action="/" method="post">
+    <input
+      type="text"
+      name="NewItem"
+      placeholder="New Item"
+      autocomplete="off"
+    />
+    <button type="submit" name="list" value=<%=listTitle %>>+</button>
+  </form>
+</div>
+
 <%- include("footer"); -%>
